exercises/30-ingress/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: bmuschko/nodejs-hello-world:1.0.0
        name: hello
        ports:
        - containerPort: 3000
          protocol: TCP
